--- a/css/menu.css
+++ b/css/menu.css
@@ -99,3 +99,11 @@
     margin-top: 20%;
     z-index: 100;
 }
+
+.menu li ul li{
+    border:1px solid #c0c0c0;
+    display:block;
+    width:150px;
+    }
+.menu li:hover ul, .menu li.over ul{display:block;}
+
