Implementado funções na tela de disciplina

--- a/css/style.css
+++ b/css/style.css
@@ -829,6 +829,12 @@ hr{
     border: 1px solid #ebe9eb;
 }
 
+.cd-nav{
+
+
+    text-align: center;
+}
+
 /* --------------------------------
 
 JavaScript desativado
