--- a/css/style.css
+++ b/css/style.css
@@ -829,7 +829,17 @@ Lista
     text-align: left;
     border: #94aab0 thin none;
 }
+.ql-video{
+    width: 100%;
+    height: 480px;
 
+}
+@media only screen and (max-width: 1024px) {
+    .ql-video{
+        width: 100%;
+        height: 370px;
+    }
+}
 @media only screen and (max-width: 640px) {
     .cd-main-list-item_second {
         width: 90%;
@@ -840,6 +850,12 @@ Lista
         margin-bottom: 10px;
         border-radius: 0.2em;
     }
+
+    .ql-video{
+        width: 100%;
+        height: 100%;
+
+    }
 }
 
 hr {
@@ -848,8 +864,6 @@ hr {
 
 
 .cd-nav {
-
-
     text-align: center;
 }
 
