--- a/css/style.css
+++ b/css/style.css
@@ -829,17 +829,20 @@ Lista
     text-align: left;
     border: #94aab0 thin none;
 }
-.ql-video{
+
+.ql-video {
     width: 100%;
     height: 480px;
 
 }
+
 @media only screen and (max-width: 1024px) {
-    .ql-video{
+    .ql-video {
         width: 100%;
         height: 370px;
     }
 }
+
 @media only screen and (max-width: 640px) {
     .cd-main-list-item_second {
         width: 90%;
@@ -851,15 +854,14 @@ Lista
         border-radius: 0.2em;
     }
 
-    .ql-video{
+    .ql-video {
         width: 100%;
         height: 100%;
-
     }
 }
 
 hr {
-    border: 1px dotted #ebe9eb;
+    border: 1px solid #cfd9db;
 }
 
 
