Correção de falhas diversas
FIX:
- Adicionados verificações antes de realizar as alterações no banco de dados;

- Corrigido verificação do tipo de aluno na tela de cadastro

- Obrigatoriedade do telefone
removido

ADD:
+ Mensagens de sucesso nos términos das operações

--- a/formulario/css/style.css
+++ b/formulario/css/style.css
@@ -281,6 +281,10 @@ position: relative;
   border-radius: .25em;
   padding: 16px;
 }
+
+.cd-form .sucess p {
+  background: #34ce57;
+}
 .cd-form .error {
   border-color: #e94b35 !important;
 }
