--- a/quill/quill.css
+++ b/quill/quill.css
@@ -17,7 +17,7 @@
     position: fixed;
     right: 0px;
     left: 0px;
-    top: 50px;
+    top: 0px;
     z-index: 1000;
     background: #fff;
     text-align: center;
@@ -29,7 +29,7 @@
 }
 
 .ql-editor {
-    border: 1px solid #cfd9db;
+    #border: 1px solid #cfd9db;
     height: 30em;
 }
 
@@ -80,7 +80,6 @@
 .ql-editor h5,
 .ql-editor h6 {
     margin: auto;
-    padding: 0;
     counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
 }
 
